# dbt-ie-group-project

./: .gitignore  README.md  create_db.py  dbt_project.yml  profiles.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/raw/open_meteo/: raw_forecast_daily.csv  raw_historical_weather_daily.csv  raw_weather_daily.csv
models/: sources.yml
models/marts/: dim_location.sql  dim_location.yml  fct_air_quality_city_day.sql  fct_air_quality_city_day.yml  fct_city_weather_day.sql  fct_city_weather_day.yml  fct_forecast_city_day.sql  fct_forecast_city_day.yml  fct_weather_forecast_day.sql  fct_weather_forecast_day.yml  mart_city_weather_summary.sql  mart_city_weather_summary.yml  mart_heatwave_events.sql  mart_heatwave_events.yml
models/staging/: stg_air_quality_hourly.sql  stg_air_quality_hourly.yml  stg_forecast_daily.sql  stg_forecast_daily.yml  stg_historical_weather_daily.sql  stg_historical_weather_daily.yml  stg_locations.sql  stg_locations.yml  stg_weather_daily.sql  stg_weather_daily.yml  stg_weather_forecast_7d.sql  stg_weather_forecast_7d.yml
scripts/: extract_open_meteo.py  extract_weather_daily.py  historical_meteo.py
src/data/raw/open_meteo/: raw_air_quality_hourly.csv  raw_historical_weather_daily.csv  raw_locations.csv  raw_weather_daily.csv  raw_weather_forecast_7d.csv
streamlit_app/: app.py
